deploy: cb6ecf068d1da889f0d04affee94bd926a6ae705

--- a/genindex.html
+++ b/genindex.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; Troubleshooting</title>
+    <title>Index &#8212; SWC-BIDS</title>
   
   
   
@@ -97,7 +97,7 @@
 
   
   
-    <p class="title logo__title">Troubleshooting</p>
+    <p class="title logo__title">SWC-BIDS</p>
   
 </a>
     
