--- a/search.html
+++ b/search.html
@@ -4,7 +4,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" /><title>Search - Troubleshooting</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /><title>Search - SWC-BIDS</title>
   
   
   
@@ -99,7 +99,7 @@
 
   
   
-    <p class="title logo__title">Troubleshooting</p>
+    <p class="title logo__title">SWC-BIDS</p>
   
 </a>
     
