--- a/specification.html
+++ b/specification.html
@@ -30,7 +30,7 @@
 <link rel="preload" as="font" type="font/woff2" crossorigin href="_static/vendor/fontawesome/6.1.2/webfonts/fa-regular-400.woff2" />
 
     <link rel="stylesheet" type="text/css" href="_static/pygments.css" />
-    <link rel="stylesheet" type="text/css" href="_static/design-style.4045f2051d55cab465a707391d5b2007.min.css" />
+    <link rel="stylesheet" type="text/css" href="_static/design-style.1e8bd061cd6da7fc9cf755528e8ffc24.min.css" />
     <link rel="stylesheet" type="text/css" href="_static/css/custom.css" />
   
   <!-- Pre-loaded scripts that we'll load fully later -->
@@ -38,16 +38,13 @@
 <link rel="preload" as="script" href="_static/scripts/pydata-sphinx-theme.js?digest=e353d410970836974a52" />
 
     <script data-url_root="./" id="documentation_options" src="_static/documentation_options.js"></script>
-    <script src="_static/jquery.js"></script>
-    <script src="_static/underscore.js"></script>
-    <script src="_static/_sphinx_javascript_frameworks_compat.js"></script>
     <script src="_static/doctools.js"></script>
     <script src="_static/sphinx_highlight.js"></script>
     <script src="_static/design-tabs.js"></script>
     <script crossorigin="anonymous" integrity="sha256-Ae2Vz/4ePdIu6ZyI/5ZGsYnb+m0JlOmKPjt6XZ9JJkA=" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js"></script>
     <script>DOCUMENTATION_OPTIONS.pagename = 'specification';</script>
     <link rel="canonical" href="https://swc-blueprint.neuroinformatics.dev/specification.html" />
-    <link rel="shortcut icon" href="_static/logo_light.png"/>
+    <link rel="icon" href="_static/logo_light.png"/>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="prev" title="SWC-Blueprint" href="index.html" />
@@ -632,7 +629,7 @@ In addition, it also includes some non-mandatory conventions for <a class="refer
     <div class="footer-items__start">
       
         <div class="footer-item"><p class="sphinx-version">
-Created using <a href="https://sphinx-doc.org/">Sphinx</a> 5.3.0.
+Created using <a href="https://sphinx-doc.org/">Sphinx</a> 6.1.3.
 <br/>
 </p>
 <p class="theme-version">
@@ -651,11 +648,11 @@ Built with the
         <img src="_static/light-logo-swc.png" alt="Sponsors" class="only-light img-sponsor"/>
         <img src="_static/dark-logo-swc.png" alt="Sponsors" class="only-dark img-sponsor"/>
     </a>
-    <a href="https://www.ucl.ac.uk/">
+    <a href="https://www.ucl.ac.uk/gatsby/gatsby-computational-neuroscience-unit">
         <img src="_static/light-logo-gatsby.png" alt="Sponsors" class="only-light img-sponsor"/>
         <img src="_static/dark-logo-gatsby.png" alt="Sponsors" class="only-dark img-sponsor"/>
     </a>
-    <a href="https://www.ucl.ac.uk/gatsby/gatsby-computational-neuroscience-unit">
+    <a href="https://www.ucl.ac.uk/">
         <img src="_static/light-logo-ucl.png" alt="Sponsors" class="only-light img-sponsor"/>
         <img src="_static/dark-logo-ucl.png" alt="Sponsors" class="only-dark img-sponsor"/>
     </a>
