--- a/v0.3.0/index.html
+++ b/v0.3.0/index.html
@@ -48,8 +48,8 @@
     <script>DOCUMENTATION_OPTIONS.pagename = 'index';</script>
     <script>
         DOCUMENTATION_OPTIONS.theme_version = '0.16.0';
-        DOCUMENTATION_OPTIONS.theme_switcher_json_url = 'https://neuroblueprint.neuroinformatics.dev/_static/switcher.json';
-        DOCUMENTATION_OPTIONS.theme_switcher_version_match = '0.1';
+        DOCUMENTATION_OPTIONS.theme_switcher_json_url = 'https://neuroblueprint.neuroinformatics.dev/latest/_static/switcher.json';
+        DOCUMENTATION_OPTIONS.theme_switcher_version_match = 'v0.3.0';
         DOCUMENTATION_OPTIONS.show_version_warning_banner = false;
         </script>
     <link rel="canonical" href="https://neuroblueprint.neuroinformatics.dev/index.html" />
